--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan -var-file terraform.tfvars -out plan.out
+        run: terraform plan -out plan.out
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' #|| github.ref == 'refs/heads/develop'
