--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -52,6 +52,7 @@ jobs:
         run: terraform apply "plan.out"
   terraform eks:
     name: "EKS Terraform"
+    needs: terraform vpc
     runs-on: ubuntu-latest
     defaults:
       run:
