--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -5,10 +5,10 @@ on:
     branches: [ main ]
     paths:
       - 'terraform/env/prod/**'
-  pull_request:
-    branches: [ main ]
-    paths:
-      - 'terraform/env/prod/**'
+  # pull_request:
+  #   branches: [ main ]
+  #   paths:
+  #     - 'terraform/env/prod/**'
   workflow_dispatch:
 
 permissions:
