--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -47,6 +47,6 @@ jobs:
         run: |
           aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 976265146601.dkr.ecr.us-east-1.amazonaws.com
           docker push 976265146601.dkr.ecr.us-east-1.amazonaws.com/prod/petclinic:latest
-          docker push 976265146601.dkr.ecr.us-east-1.amazonaws.com/prod/1.0.${GITHUB_RUN_NUMBER}
+          docker push 976265146601.dkr.ecr.us-east-1.amazonaws.com/prod/petclinic:1.0.${GITHUB_RUN_NUMBER}
 
         
